--- a/src/styles/imports/variables.scss
+++ b/src/styles/imports/variables.scss
@@ -1,4 +1,4 @@
-$primary: #034d74;
-$secondary: #3028bd;
-$tertiary: #04341e;
-$bg: #fbc5b4;
+$primary: #033652;
+$secondary: #ece9f6;
+$tertiary: #d1f6d1;
+$bg: #cdc9c8;
