--- a/src/components/AboutComponent/AboutComponent.module.scss
+++ b/src/components/AboutComponent/AboutComponent.module.scss
@@ -4,13 +4,17 @@
 	width: 100%;
 
 	.link {
+		background-color: $secondary;
 		cursor: pointer;
 		font-weight: 600;
-		background-color: green;
 		transition: all 0.5s ease-in-out;
 
 		&.link:hover {
-			background-color: aqua;
+			background-color: $tertiary;
 		}
+	}
+
+	.aboutSection {
+		width: 100%;
 	}
 }
