--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -1,3 +1,3 @@
-@import 'imports/fonts.scss';
-@import 'imports/mixins.scss';
-@import 'imports/variables.scss';
+@import "imports/fonts.scss";
+@import "imports/mixins.scss";
+@import "imports/variables.scss";
