--- a/src/components/LandingComponent/LandingComponent.module.scss
+++ b/src/components/LandingComponent/LandingComponent.module.scss
@@ -3,14 +3,19 @@
 .container {
 	width: 100%;
 
+	.bold {
+		font-weight: 800;
+	}
+
 	.link {
-		background-color: green;
+		border-radius: 5px;
+		background-color: $secondary;
 		cursor: pointer;
 		font-weight: 600;
 		transition: all 0.5s ease-in-out;
 
 		&.link:hover {
-			background-color: aqua;
+			background-color: $tertiary;
 		}
 	}
 }
