--- a/src/components/NavComponent/NavComponent.module.scss
+++ b/src/components/NavComponent/NavComponent.module.scss
@@ -20,6 +20,7 @@
 		cursor: pointer;
 		font-size: 20px;
 		font-weight: 600;
+		text-transform: uppercase;
 		transition: all 0.2s ease-in-out;
 		user-select: none;
 
