--- a/src/components/ProjectsComponent/ProjectItemComponent/ProjectItemComponent.module.scss
+++ b/src/components/ProjectsComponent/ProjectItemComponent/ProjectItemComponent.module.scss
@@ -10,7 +10,7 @@
 	grid-template-areas:
 		"image title"
 		"image description"
-		"image tags";
+		"links tags";
 
 	.gridTitle {
 		margin: 0 30px;
@@ -23,6 +23,27 @@
 
 	.gridImage {
 		grid-area: image;
+	}
+
+	.linkContainer {
+		display: flex;
+		justify-content: center;
+		gap: 20px;
+		grid-area: links;
+
+		.link {
+			padding: 5px;
+			border-radius: 10px;
+			background-color: $secondary;
+			cursor: pointer;
+			font-size: 20px;
+			font-weight: 700;
+			transition: background-color 0.5s ease-in-out;
+
+			&.link:hover {
+				background-color: $tertiary;
+			}
+		}
 	}
 
 	.gridDescription {
