--- a/src/styles/imports/variables.scss
+++ b/src/styles/imports/variables.scss
@@ -1,4 +1,4 @@
 $primary: #033652;
-$secondary: #ece9f6;
-$tertiary: #d1f6d1;
-$bg: #cdc9c8;
+$secondary: #e2ddf6;
+$tertiary: #f6e4d1;
+$bg: #f1f1f1;
