--- a/src/components/AboutComponent/AboutComponent.module.scss
+++ b/src/components/AboutComponent/AboutComponent.module.scss
@@ -4,17 +4,136 @@
 	width: 100%;
 
 	.link {
-		background-color: $secondary;
-		cursor: pointer;
-		font-weight: 600;
-		transition: all 0.5s ease-in-out;
+		@include link;
 
-		&.link:hover {
-			background-color: $tertiary;
-		}
+		font-weight: 600;
 	}
 
 	.aboutSection {
 		width: 100%;
+
+		h3 {
+			margin: 10px 0;
+			font-size: 40px;
+
+			@include tablet {
+				margin: 30px 0;
+				font-size: 50px;
+			}
+		}
+
+		h4 {
+			font-size: 30px;
+
+			@include tablet {
+				font-size: 40px;
+			}
+		}
+
+		.item {
+			display: grid;
+			align-items: center;
+			margin: 20px 0;
+			grid-template-areas:
+				"header"
+				"image"
+				"description"
+				"video";
+			justify-items: center;
+
+			@include tablet {
+				grid-template-areas:
+					"image header"
+					"image description"
+					"video video";
+			}
+
+			&.flipped {
+				@include tablet {
+					grid-template-areas:
+						"header image"
+						"description image"
+						"video video";
+				}
+			}
+
+			.header {
+				margin: 40px;
+				font-size: 30px;
+				grid-area: header;
+
+				.italics {
+					font-style: italic;
+					opacity: 0.7;
+				}
+			}
+
+			.description {
+				margin: 10px 0;
+				font-size: 18px;
+				grid-area: description;
+
+				@include tablet {
+					margin: 40px;
+				}
+
+				.bold {
+					font-weight: 700;
+				}
+			}
+
+			.imageContainer {
+				width: 200px;
+				height: 200px;
+				grid-area: image;
+
+				@include tablet {
+					width: 300px;
+					height: 300px;
+				}
+
+				@include desktop {
+					width: 400px;
+					height: 400px;
+				}
+			}
+		}
+
+		.hobbies {
+			display: flex;
+			flex-direction: column;
+			align-items: center;
+			margin: 20px 0;
+			justify-items: center;
+
+			@include tablet {
+				flex-direction: row;
+			}
+
+			.description {
+				margin: 40px;
+				font-size: 18px;
+
+				li {
+					margin: 10px 0;
+				}
+			}
+		}
+	}
+
+	.video {
+		margin-top: 10px;
+		grid-area: video;
+		justify-self: center;
+
+		.iframe {
+			width: 320px;
+			height: 180px;
+
+			@include tablet {
+				width: 480px;
+				height: 270px;
+			}
+		}
 	}
 }
