--- a/src/components/HeaderComponent/HeaderComponent.module.scss
+++ b/src/components/HeaderComponent/HeaderComponent.module.scss
@@ -11,6 +11,7 @@
 
 	h1 {
 		margin: 0;
+		cursor: pointer;
 		font-size: 50px;
 	}
 
@@ -20,5 +21,57 @@
 		border-radius: 50%;
 		margin: 5px 0;
 		background-color: $primary;
+	}
+}
+
+.navBar {
+	@include container;
+
+	display: flex;
+	max-width: 1000px;
+	align-items: center;
+	justify-content: space-between;
+	margin-top: 20px;
+
+	.navItem {
+		position: relative;
+		display: flex;
+		align-items: center;
+		justify-content: center;
+		padding: 5px 10px;
+		border-radius: 5px;
+		cursor: pointer;
+		font-size: 20px;
+		font-weight: 500;
+		text-transform: uppercase;
+		transition: all 0.2s ease-in-out;
+		user-select: none;
+
+		&.highlight {
+			background-color: $secondary;
+			font-weight: 900;
+		}
+
+		&.navItem:hover:not(.highlight) {
+			background-color: $tertiary;
+		}
+
+		.underline {
+			position: absolute;
+			right: 0;
+			bottom: -20px;
+			left: 0;
+			height: 3px;
+			border: none;
+			border-radius: 50%;
+			background-color: $primary;
+		}
+	}
+
+	.divider {
+		width: 0;
+		height: 20px;
+		border: none;
+		border-right: 1px solid $primary;
 	}
 }
