--- a/src/components/LandingComponent/LandingComponent.module.scss
+++ b/src/components/LandingComponent/LandingComponent.module.scss
@@ -7,15 +7,21 @@
 		font-weight: 800;
 	}
 
-	.link {
-		border-radius: 5px;
-		background-color: $secondary;
-		cursor: pointer;
-		font-weight: 600;
-		transition: all 0.5s ease-in-out;
+	li {
+		margin: 15px 0;
+	}
 
-		&.link:hover {
-			background-color: $tertiary;
+	.link {
+		@include link;
+	}
+
+	.cvContainer {
+		height: 1000px;
+		margin: 20px;
+
+		.cv {
+			width: 100%;
+			height: 100%;
 		}
 	}
 }
