--- a/src/components/SkillsComponent/SkillsComponent.module.scss
+++ b/src/components/SkillsComponent/SkillsComponent.module.scss
@@ -3,14 +3,52 @@
 .container {
 	width: 100%;
 
-	.link {
-		background-color: green;
-		cursor: pointer;
-		font-weight: 600;
-		transition: all 0.5s ease-in-out;
+	.graphContainer {
+		display: flex;
+		flex-direction: column;
+		align-items: center;
+		justify-content: space-between;
 
-		&.link:hover {
-			background-color: aqua;
+		.header {
+			margin: 10px 0;
+			font-size: 40px;
+		}
+
+		.svg {
+			width: 100%;
+			margin: 10px;
+
+			@include tablet {
+				max-width: 1000px;
+			}
+
+			.text {
+				font-size: 20px;
+
+				@include tablet {
+					font-size: 27px;
+				}
+
+				@include desktop {
+					font-size: 35px;
+				}
+			}
+
+			.bar {
+				fill: $primary;
+			}
+
+			.divider {
+				stroke: $primary;
+				stroke-width: 2px;
+			}
+
+			.graphLine {
+				opacity: 0.5;
+				stroke: $primary;
+				stroke-dasharray: 4;
+				stroke-width: 1px;
+			}
 		}
 	}
 }
