--- a/src/styles/imports/mixins.scss
+++ b/src/styles/imports/mixins.scss
@@ -22,15 +22,23 @@ $laptop: 1024px;
 
 @mixin container {
 	width: 100%;
-	max-width: 700px;
 	padding: 0 30px;
 	margin: 0 auto;
 
-	@include tablet {
-		max-width: 1000px;
+	@include desktop {
+		max-width: 1300px;
 	}
+}
 
-	@include desktop() {
-		max-width: 1400px;
+@mixin link {
+	padding: 5px 10px;
+	border-radius: 5px;
+	background-color: $secondary;
+	cursor: pointer;
+	font-weight: 700;
+	transition: all 0.2s ease-in-out;
+
+	&:hover {
+		background-color: $tertiary;
 	}
 }
