--- a/src/styles/imports/mixins.scss
+++ b/src/styles/imports/mixins.scss
@@ -35,10 +35,55 @@ $laptop: 1024px;
 	border-radius: 5px;
 	background-color: $secondary;
 	cursor: pointer;
+	font-size: 14px;
 	font-weight: 700;
 	transition: all 0.2s ease-in-out;
 
 	&:hover {
 		background-color: $tertiary;
 	}
+
+	@include tablet {
+		font-size: 20px;
+	}
+}
+
+@mixin bigHeader {
+	margin: 0;
+	font-size: 40px;
+
+	@include tablet {
+		font-size: 50px;
+	}
+}
+
+@mixin smallHeader {
+	margin: 0;
+	font-size: 25px;
+	font-weight: 700;
+
+	@include tablet {
+		font-size: 35px;
+	}
+}
+
+@mixin smallText {
+	font-size: 14px;
+
+	@include tablet {
+		font-size: 18px;
+	}
+
+	@include desktop {
+		font-size: 20px;
+	}
+}
+
+@mixin line ($height: 5px) {
+	width: 100%;
+	height: $height;
+	border: none;
+	border-radius: 50%;
+	margin: 5px 0;
+	background-color: $primary;
 }
