--- a/src/components/AboutComponent/AboutComponent.module.scss
+++ b/src/components/AboutComponent/AboutComponent.module.scss
@@ -12,14 +12,8 @@
 	.aboutSection {
 		width: 100%;
 
-		h3 {
-			margin: 10px 0;
-			font-size: 40px;
-
-			@include tablet {
-				margin: 30px 0;
-				font-size: 50px;
-			}
+		.bigHeader {
+			@include bigHeader;
 		}
 
 		h4 {
@@ -58,9 +52,14 @@
 			}
 
 			.header {
-				margin: 40px;
-				font-size: 30px;
+				@include smallHeader;
+
 				grid-area: header;
+				margin-inline: 0;
+
+				@include tablet {
+					margin-inline: 20px;
+				}
 
 				.italics {
 					font-style: italic;
@@ -69,12 +68,13 @@
 			}
 
 			.description {
-				margin: 10px 0;
-				font-size: 18px;
+				@include smallText;
+
+				margin-right: 0;
 				grid-area: description;
 
 				@include tablet {
-					margin: 40px;
+					margin-right: 20px;
 				}
 
 				.bold {
@@ -111,11 +111,17 @@
 			}
 
 			.description {
-				margin: 40px;
-				font-size: 18px;
+				@include smallText;
 
-				li {
-					margin: 10px 0;
+				margin-right: 0;
+				grid-area: description;
+
+				@include tablet {
+					margin-right: 20px;
+				}
+
+				.bold {
+					font-weight: 700;
 				}
 			}
 		}
@@ -127,8 +133,8 @@
 		justify-self: center;
 
 		.iframe {
-			width: 320px;
-			height: 180px;
+			width: 288px;
+			height: 162px;
 
 			@include tablet {
 				width: 480px;
