--- a/src/components/LandingComponent/LandingComponent.module.scss
+++ b/src/components/LandingComponent/LandingComponent.module.scss
@@ -3,8 +3,18 @@
 .container {
 	width: 100%;
 
-	.bold {
-		font-weight: 800;
+	.bigHeader {
+		@include bigHeader;
+	}
+
+	.text {
+		@include smallText();
+
+		margin: 15px 0;
+
+		.bold {
+			font-weight: 800;
+		}
 	}
 
 	li {
@@ -16,12 +26,8 @@
 	}
 
 	.cvContainer {
-		height: 1000px;
-		margin: 20px;
-
-		.cv {
-			width: 100%;
-			height: 100%;
-		}
+		display: flex;
+		width: 100%;
+		justify-content: center;
 	}
 }
