--- a/src/components/ProjectsComponent/ProjectArrayComponent/ProjectArrayComponent.module.scss
+++ b/src/components/ProjectsComponent/ProjectArrayComponent/ProjectArrayComponent.module.scss
@@ -3,8 +3,11 @@
 .container {
 	width: 100%;
 
-	h3 {
-		margin: 20px 0;
-		font-size: 45px;
+	.bigHeader {
+		@include bigHeader;
+	}
+
+	.divider {
+		@include line;
 	}
 }
