--- a/src/components/HomeComponent/HomeComponent.module.scss
+++ b/src/components/HomeComponent/HomeComponent.module.scss
@@ -31,8 +31,11 @@
 
 	.hrContainer {
 		display: flex;
+		width: 100%;
 		height: 50px;
+		flex-direction: column;
 		align-items: center;
+		justify-content: center;
 
 		@include container;
 
