--- a/src/components/HomeComponent/HomeComponent.module.scss
+++ b/src/components/HomeComponent/HomeComponent.module.scss
@@ -8,9 +8,13 @@
 		position: sticky;
 		z-index: 5;
 		top: 0;
-		padding: 30px 0;
+		padding: 10px 0;
 		box-shadow: 0 0 0;
 		transition: all 0.2s ease-in-out;
+
+		@include tablet {
+			padding: 30px 0;
+		}
 
 		&.scrolled {
 			box-shadow: 0 0 5px;
@@ -40,12 +44,7 @@
 		@include container;
 
 		.hr {
-			width: 100%;
-			height: 5px;
-			border: none;
-			border-radius: 50%;
-			margin: 5px 0;
-			background-color: $primary;
+			@include line;
 		}
 	}
 }
