--- a/src/components/ProjectsComponent/ProjectItemComponent/ProjectItemComponent.module.scss
+++ b/src/components/ProjectsComponent/ProjectItemComponent/ProjectItemComponent.module.scss
@@ -55,6 +55,21 @@
 		@include tablet {
 			width: 400px;
 		}
+
+		.vid {
+			width: 200px;
+			height: 200px;
+
+			@include tablet {
+				width: 300px;
+				height: 300px;
+			}
+
+			@include desktop {
+				width: 400px;
+				height: 400px;
+			}
+		}
 	}
 
 	.linkContainer {
