adding latest commit message, general tidying

--- a/src/components/SkillsComponent/SkillsComponent.module.scss
+++ b/src/components/SkillsComponent/SkillsComponent.module.scss
@@ -3,6 +3,10 @@
 .container {
 	width: 100%;
 
+	.bigHeader {
+		@include bigHeader;
+	}
+
 	.graphContainer {
 		display: flex;
 		flex-direction: column;
