--- a/src/components/ProjectsComponent/ProjectItemComponent/ProjectItemComponent.module.scss
+++ b/src/components/ProjectsComponent/ProjectItemComponent/ProjectItemComponent.module.scss
@@ -46,14 +46,17 @@
 
 	.gridImage {
 		width: 200px;
+		height: 200px;
 		grid-area: image;
 
 		@include tablet {
 			width: 300px;
+			height: 300px;
 		}
 
-		@include tablet {
+		@include desktop {
 			width: 400px;
+			height: 400px;
 		}
 
 		.vid {
