--- a/src/components/LandingComponent/LandingComponent.module.scss
+++ b/src/components/LandingComponent/LandingComponent.module.scss
@@ -30,4 +30,23 @@
 		width: 100%;
 		justify-content: center;
 	}
+
+	.contactList {
+		padding-inline-start: 0;
+
+		@include tablet {
+			padding-inline-start: 40px;
+		}
+	}
+
+	.item {
+		display: flex;
+		flex-direction: column;
+		align-items: center;
+		justify-content: center;
+
+		@include tablet {
+			display: list-item;
+		}
+	}
 }
