added styling on skills intro (WIP)

--- a/src/components/SkillsComponent/SkillsComponent.module.scss
+++ b/src/components/SkillsComponent/SkillsComponent.module.scss
@@ -7,6 +7,10 @@
 		@include bigHeader;
 	}
 
+	.text {
+		@include smallText;
+	}
+
 	.graphContainer {
 		display: flex;
 		flex-direction: column;
