added themed mixins with mode switcher

--- a/src/components/FooterComponent/FooterComponent.module.scss
+++ b/src/components/FooterComponent/FooterComponent.module.scss
@@ -10,7 +10,13 @@
 	@include container;
 
 	.hr {
-		@include line;
+		&.light {
+			@include line(5px, light);
+		}
+
+		&.dark {
+			@include line(5px, dark);
+		}
 	}
 
 	.commitMessage {
