--- a/src/styles/imports/variables.scss
+++ b/src/styles/imports/variables.scss
@@ -1,4 +1,9 @@
-$primary: #033652;
-$secondary: #e2ddf6;
-$tertiary: #f6e4d1;
-$bg: #f1f1f1;
+$primary_light: #033652;
+$secondary_light: #e2ddf6;
+$tertiary_light: #e8b784;
+$bg_light: #f1f1f1;
+
+$primary_dark:  #f7f0e9;
+$secondary_dark: #4e4e4e;
+$tertiary_dark: #624040;
+$bg_dark:  #0f1c26;
