--- a/src/components/HeaderComponent/HeaderComponent.module.scss
+++ b/src/components/HeaderComponent/HeaderComponent.module.scss
@@ -5,8 +5,8 @@
 	z-index: 5;
 	top: 0;
 	padding: 10px 0;
+	background-color: inherit;
 	box-shadow: 0 0 0;
-	transition: all 0.2s ease-in-out;
 
 	@include tablet {
 		padding: 30px 0;
@@ -32,7 +32,13 @@
 		}
 
 		.hr {
-			@include line;
+			&.light {
+				@include line(5px, light);
+			}
+
+			&.dark {
+				@include line(5px, dark);
+			}
 		}
 	}
 
@@ -49,12 +55,17 @@
 		}
 
 		.navItem {
-			@include link;
+			&.light {
+				@include link(light);
+			}
+
+			&.dark {
+				@include link(dark);
+			}
 
 			position: relative;
 			font-size: 14px;
 			text-transform: uppercase;
-			transition: all 0.2s ease-in-out;
 			user-select: none;
 
 			@include tablet {
@@ -62,7 +73,13 @@
 			}
 
 			.underline {
-				@include line(4px);
+				&.light {
+					@include line(4px, light);
+				}
+
+				&.dark {
+					@include line(4px, dark);
+				}
 
 				position: absolute;
 				right: 0;
