dynamic favicon, typos, header shadow fix, persistant theme

--- a/src/components/HeaderComponent/HeaderComponent.module.scss
+++ b/src/components/HeaderComponent/HeaderComponent.module.scss
@@ -13,7 +13,13 @@
 	}
 
 	&.scrolled {
-		box-shadow: 0 0 5px;
+		&.light {
+			box-shadow: 0 0 5px $primary_light;
+		}
+
+		&.dark {
+			box-shadow: 0 0 5px $primary_dark;
+		}
 	}
 
 	.headerContainer {
