--- a/src/components/HeaderComponent/HeaderComponent.module.scss
+++ b/src/components/HeaderComponent/HeaderComponent.module.scss
@@ -6,20 +6,32 @@
 	top: 0;
 	padding: 10px 0;
 	background-color: inherit;
-	box-shadow: 0 0 0;
+
+	&::after {
+		position: absolute;
+		z-index: -1;
+		top: 0;
+		width: 100%;
+		height: 100%;
+		content: "";
+		opacity: 0;
+		transition: 0.2s opacity ease-in-out;
+	}
+
+	&.scrolled::after {
+		opacity: 1;
+	}
+
+	&.light::after {
+		box-shadow: 0 0 5px $primary_light;
+	}
+
+	&.dark::after {
+		box-shadow: 0 0 5px $primary_dark;
+	}
 
 	@include tablet {
 		padding: 30px 0;
-	}
-
-	&.scrolled {
-		&.light {
-			box-shadow: 0 0 5px $primary_light;
-		}
-
-		&.dark {
-			box-shadow: 0 0 5px $primary_dark;
-		}
 	}
 
 	.headerContainer {
